# dual-writes

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  justfile
infra/: deployment.yaml  kube-down.sh  kube-up.sh  namespace.yaml  nats-config.yaml  nats-deployment.yaml  nats-service.yaml  service.yaml
proto/: analytics-descriptor.pb  analytics.proto
scripts/: grpc-list.sh  grpc-request.sh  k8s-request.sh  nats-connect.sh  payload.json
src/: config.rs  main.rs  nats.rs  service.rs  store.rs
