[package]
name = "dualwrites"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-nats = "0.38.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"


[build-dependencies]
tonic-build = "0.12.3"